# sniper

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
configs/: dev.toml
programs/sniper-helper/: Cargo.toml
programs/sniper-helper/src/: lib.rs
programs/sniper-helper/src/instructions/: check_token_amount.rs  errors.rs  init_snipe.rs  mod.rs  state.rs
src/: sniper.ts
src/analytical/: in_memory_analytical_service.ts  sniping_analytical_service.ts  types.ts
src/common/: config.ts  geyser_client.ts  openbook_utils.ts  payer.ts  pool_update.ts  raydium_utils.ts  sol_connection.ts  spl_token.ts  txn_utils.ts  types.ts  umi.ts  utils.ts
src/dispatcher/: creator_blacklist.ts  dispatcher.ts  strategy.ts  types.ts
src/event_source/: event_source.ts  raydium_event_source.ts
src/jito/: client.ts  leader-schedule.ts  leader_schedule.ts
src/monitor/: account_creation_monitor.ts
src/program/: sniper_helper_utils.ts
src/program/idl/: sniper_helper.ts
src/task/: errors.ts  sniping_criteria.ts  spam_task.ts  spammer.ts  task.ts  types.ts  utils.ts
src/trade/: dry_runner.ts  position_manager.ts  raydium_v4_swapper.ts  swapper.ts
tests/: sniper_helper_test.ts
